Updated fixed columns to be false, making this configurable later

--- a/ckanext/datatablesview/templates/datatables/datatables_view.html
+++ b/ckanext/datatablesview/templates/datatables/datatables_view.html
@@ -25,7 +25,7 @@
         data-col-reorder="false"
       {% endif %}
       data-fixed-header="true"
-      data-fixed-columns="true"
+      data-fixed-columns="false"
       data-dom='"Blifrtip"'
       data-buttons='[
         {
