--- a/ckanext/datatablesview/templates/datatables/datatables_view.html
+++ b/ckanext/datatablesview/templates/datatables/datatables_view.html
@@ -25,7 +25,7 @@
         data-col-reorder="false"
       {% endif %}
       data-fixed-header="true"
-      # This should be made configurable in the long-term
+      {# This should be made configurable in the long-term #} 
       data-fixed-columns="false"
       data-dom='"Blifrtip"'
       data-buttons='[
