--- a/ckanext/datatablesview/templates/datatables/datatables_view.html
+++ b/ckanext/datatablesview/templates/datatables/datatables_view.html
@@ -31,6 +31,9 @@
       {% endif %}
       data-fixed-header="true"
       data-dom='"Blifrtip"'
+      data-scroll-y="1000px"
+      data-scroll-collapse="true"
+      data-length-menu='[ 10, 50, 100, 500, 1000 ]'
       data-buttons='[
         {
           "extend": "colvis",
@@ -59,6 +62,14 @@
 {% block styles %}{% endblock %}
 {% block custom_styles %}
 <style>
+  .dt-buttons .btn-default {
+    background-color: #288BE4;
+    color: #ffffff;
+  }
+  .dt-buttons .btn-default:hover {
+    background-color: #fb4d42;
+    color: #ffffff;
+  }
   @media (min-width: 767px) {
     .dt-buttons {
       float: right;
