Remove anonymous access to datastore_search_sql API

--- a/ckanext/datastore/templates/ajax_snippets/api_info.html
+++ b/ckanext/datastore/templates/ajax_snippets/api_info.html
@@ -52,7 +52,19 @@ Example
               </tr>
               <tr>
                 <th scope="row">{{ _('Query (via SQL)') }}</th>
-                <td><code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search_sql', qualified=True) }}</code></td>
+                <td>
+                  <code>{{ h.url_for(controller='api', action='action', ver=3, logic_function='datastore_search_sql', qualified=True) }}</code>
+                  <br/>
+                  <i>
+                    <code>
+                      * Requires <strong>API Key</strong> to use SQL Queries follow the <a href="http://docs.ckan.org/en/{{g.ckan_doc_version}}/api/#authentication-and-api-keys" alt="API documentation">documentation</a> below:
+                    </code>
+                  </i>
+                  <br/>
+                  <code>
+                    <a href="http://docs.ckan.org/en/{{g.ckan_doc_version}}/api/#authentication-and-api-keys" alt="API documentation">http://docs.ckan.org/en/{{g.ckan_doc_version}}/api/#authentication-and-api-keys</a>
+                  </code>
+                </td>
               </tr>
 
             </tbody>
@@ -80,6 +92,16 @@ Example
           <strong>{{ _('Query example (via SQL statement)') }}</strong>
           <p>
           <code>{{sql_example_url}}</code>
+          <br/>
+          <i>
+            <code>
+              * Requires <strong>API Key</strong> to use SQL Queries follow the <a href="http://docs.ckan.org/en/{{g.ckan_doc_version}}/api/#authentication-and-api-keys" alt="API documentation">documentation</a> below:
+            </code>
+          </i>
+          <br/>
+          <code>
+            <a href="http://docs.ckan.org/en/{{g.ckan_doc_version}}/api/#authentication-and-api-keys" alt="API documentation">http://docs.ckan.org/en/{{g.ckan_doc_version}}/api/#authentication-and-api-keys</a>
+          </code>
           </p>
 
         </div>
