Add Data Table filtered downloads and API limits to CNRA (#18)
* Add download dropdown

* [#4497] connect js, route, form

* [#4497] implement download redirect

* [#4497] unicode literal

* use request.params for 2.7 compatibility

* [#4462] _get_types: pass connection instead of context

* [#4462] _get_type: pass connection instead of context

* [#4462] _get_fields: pass connection, resource_id instead of context, data_dict

* [#4462] _get_fields_types: pass connection, resource_id instead of context, data_dict

* [#4462] datastore_search: partial result fields fix

* [#4462] fix reuse of variable name

* [#4462] _textsearch_query: lang, q, plain instead of data_dict

* [#4462] datastore_search: exclude rank columns if not in fields

* [#4462] _result_fields: remove unused parameter

* revert string_types change

* revert string_types change

* Get visible columns

* [#4497] download visible columns

* Remove _id column from filtered download

* [#4462] _textsearch_query: lang, q, plain instead of data_dict

* [#4497] s/const/var for js compatibility

* [#4484] manually backported to ckan 2.7.x (#8)

Add limits for action functions

* Add limits to datastore_search(_sql) (#16)

* Backport of 4561-limit-datastore_search 74d8fb2

* CircleCI update from master

* Nop

* Fix tests for opengov branch

The _id column is removed from datastore dumps in this opengov branch
because:
opengov commit: co0adf16426113394af42bbacc4644f039ebe9e2ec
+    field_list = [f['id'] for f in rec['fields'] if f['id'] != '_id']

also some minor fixes

* Use pop() for efficiency

--- a/ckanext/datatablesview/templates/datatables/datatables_view.html
+++ b/ckanext/datatablesview/templates/datatables/datatables_view.html
@@ -8,7 +8,10 @@
       data-server-side="true"
       data-processing="true"
       data-ajax='{
-          "url": "/datatables/ajax/{{ resource_view.id }}",
+          "url": "{{ h.url_for(
+            controller='ckanext.datatablesview.controller:DataTablesController',
+            action='ajax',
+            resource_view_id=resource_view.id) }}",
           "type": "POST",
           "data": { "filters": "{{ request.params.get('filters', '')|e }}" }
         }'
@@ -35,7 +38,7 @@
         {
           "extend": "colvis",
           "text": "{{ _('Hide/Unhide Columns') }}"
-        }{{ ', "copy", "excel", "print"' | safe
+        }{{ ', "copy", "print"' | safe
           if resource_view.get('export_buttons') else ''}}
         ]'
       data-keys='true'>
@@ -52,6 +55,12 @@
     <tbody>
     </tbody>
   </table>
+  <form id="filtered-datatables-download" method="POST" action="{{ h.url_for(
+      controller='ckanext.datatablesview.controller:DataTablesController',
+      action='filtered_download',
+      resource_view_id=resource_view.id) }}">
+    <input type="hidden" name="filters" value="{{ request.params.get('filters', '')|e }}" />
+  </form>
 
   {% resource 'ckanext-datatablesview/main' %}
 {% endblock %}
